fixed some scaling issues on mobile

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -10,7 +10,6 @@ body {
 #attempts-table-container table {
     margin-right: auto;
     margin-left: auto;
-    width: 50%;
 }
 
 .hyperlink-btn-container {
